syntax = "proto3";

package user;

option go_package = "E-Commerce/user-service/proto";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (AuthResponse);
  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthResponse);
  rpc GetUserProfile (GetUserProfileRequest) returns (UserProfile);
  rpc UpdateUserProfile (UpdateUserProfileRequest) returns (UserProfile);
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string new_password = 2;
}

message User {
  string id = 1;
  string email = 2;
  string role = 3;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message UserProfile {
  string id = 1;
  string email = 2;
  string role = 3;
}